Added requesting by api from OpenWeather

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,5 +17,10 @@
         </tr>
     </table>
 </header>
+<script>
+    var myVariable = [[${result}]];
+    console.log(myVariable);
+</script>
+<!--<p th:text="${result} + goool"></p>-->
 </body>
 </html>
