--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,9 @@
         </tr>
     </table>
 </header>
-<p th:text="${result}"></p>
-<p>Weather now: <div th:test="${weatherNow}"></div></p>
 <p th:text="${debug}"></p>
+<div>Weather of the day today: <span th:text="${dayToday}"></span></div>
+<div>Weather of the day after day: <span th:text="${dayAfterDay}"></span></div>
+<div>Weather of the day after two days: <span th:text="${dayAfterTwoDays}"></span></div>
 </body>
 </html>
