Ended developing weather resolve service

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,7 @@
         </tr>
     </table>
 </header>
-<p th:text="${debug}"></p>
-<div>Weather at <span th:text="${CountryName}"></span> <span th:text ="${regionName}"></span> <span th:text="${cityName}"></span></div>
+<div>Weather at <span th:text="${countryName}"></span> <span th:text ="${regionName}"></span> <span th:text="${cityName}"></span></div>
 <div>Weather of the day today: <span th:text="${dayToday}"></span></div>
 <div>Weather of the day after day: <span th:text="${dayAfterDay}"></span></div>
 <div>Weather of the day after two days: <span th:text="${dayAfterTwoDays}"></span></div>
