--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,5 +21,35 @@
 <div>Weather of the day today: <span th:text="${dayToday}"></span></div>
 <div>Weather of the day after day: <span th:text="${dayAfterDay}"></span></div>
 <div>Weather of the day after two days: <span th:text="${dayAfterTwoDays}"></span></div>
+
+<div id="image" style="width: 100%; height: 500px;">
+    <span class="temp" th:text="${TemperatureToday}">
+    </span>
+    <div class="country" th:text="${countryName}">
+    </div>
+    <div class="region" th:text="${regionName}">
+    </div>
+    <div class="city" th:text="${cityName}">
+    </div>
+
+</div>
+<script th:inline="javascript">
+    var map = new Map();
+    // Sky Clouds Snowflake Rain Thunderstorm Snow
+    map.set('Sky', 'clearSky.jpeg');
+    map.set('Clouds', 'clouds4k.jpg');
+    map.set('Snowflake', 'snowy.jpg'); // or snowy2
+    map.set('Rain', 'rainy.jpg');
+    map.set('Thunderstorm', 'thunderstorm.jpg');
+    map.set('Snow' ,'snow.jpg'); // or snowy2
+
+    var weatherImage = map.get([[${imageName}]]);
+    var src = document.getElementById("image");
+
+    src.style.backgroundImage = 'url("' + weatherImage + '")';
+    src.style.backgroundSize = 'cover';
+    src.style.backgroundPosition = 'center';
+
+</script>
 </body>
 </html>
