--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,9 +1,10 @@
-.blue-header {
-    background-color: #3498db;
+body {
+    font-family: Georgia, serif;
+}
+header {
     color: white;
     text-align: center;
     padding: 20px;
-    background-image: url("clouds.jpg");
 }
 table {
     width: 95%;
@@ -32,24 +33,16 @@ a:hover{
     margin-inline: auto;
     width: fit-content;
 }
-.country {
-    font-size: 35px;
+.position {
+    font-size: 25px;
     color: white;
-    position: absolute;
-    left: 80%;
-    line-height: 15;
+    padding-top: 50px;
+    margin-left: 30px;
 }
-.region {
-    font-size: 30px;
+.weatherList {
+    font-size: 25px;
     color: white;
-    position: absolute;
-    left: 80%;
-    line-height: 15;
-}
-.city {
-    font-size: 30px;
-    color: white;
-    position: absolute;
-    left: 80%;
-    line-height: 15;
+    margin-top: 20px;
+    text-align: right;
+    line-height: 55px;
 }
