--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Error</title>
+  <meta charset="UTF-8">
+  <title>$Title$</title>
 </head>
 <body>
-<p>You sent wrong coordinates.</p>
+$END$
 </body>
 </html>
