--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" th:href="@{styles.css}">
-    <script th:src="@{code.js}"></script>
+<!--    <script th:src="@{code.js}"></script>-->
 </head>
 <body>
 
